--- a/package.json
+++ b/package.json
@@ -60,14 +60,19 @@
     "auto-changelog": "~2.2.0",
     "babel-eslint": "~10.1.0",
     "babel-jest": "~26.3.0",
+    "babel-plugin-transform-regenerator": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "chromedriver": "^85.0.0",
     "core-js": "~3.6.5",
     "eslint": "~7.8.1",
     "eslint-plugin-vue": "~6.2.2",
+    "js-cookie": "^2.2.1",
     "node-sass": "~4.14.1",
     "npm-run-all": "~4.1.5",
     "sass-loader": "~10.0.2",
-    "vue-template-compiler": "~2.6.12"
+    "secure-ls": "^1.2.6",
+    "vue-template-compiler": "~2.6.12",
+    "vuex-persistedstate": "^4.0.0-beta.1"
   },
   "browserslist": [
     "> 1%",
